Edit env example file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
+# Application
+PORT=8000
+
 # Database
 DATABASE_HOST='localhost'
 DATABASE_PORT=5432
-DATABASE_NAME= 
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
