--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -5,20 +5,20 @@ services:
     image: ghcr.io/samithiwat/samithiwat-backend:latest
     container_name: main-backend-service
     restart: always
+
+    env_file:
+      - prod.env
     environment:
       DATABASE_HOST: "db"
-      DATABASE_PORT: ${DATABASE_PORT}
-      DATABASE_NAME: ${DATABASE_NAME}
-      DATABASE_USERNAME: ${DATABASE_USERNAME}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+
   db:
     image: postgres:14.1
     container_name: samithiwat-db
     restart: unless-stopped
+
+    env_file:
+      - prod.env
     environment:
-      POSTGRES_DB: ${DATABASE_NAME}
-      POSTGRES_USER: ${DATABASE_USERNAME}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - ./volumes/postgres:/volumes/postgresql/data
