Fix docker-compose file to can be run correctly

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  db:
+  local-db:
     image: postgres:14.1
     container_name: samithiwat-db
     restart: unless-stopped
