--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -3,17 +3,20 @@ version: "3.9"
 services:
   main-backend:
     image: ghcr.io/samithiwat/samithiwat-backend:latest
-    container_name: main-backend-service
+    container_name: samithiwat-app-backend
     restart: always
 
     env_file:
       - prod.env
     environment:
-      DATABASE_HOST: "db"
+      DATABASE_HOST: db
+
+    networks:
+      - samithiwat-app
 
   db:
     image: postgres:14.1
-    container_name: samithiwat-db
+    container_name: samithiwat-app-db
     restart: unless-stopped
 
     env_file:
@@ -23,11 +26,11 @@ services:
     volumes:
       - ./volumes/postgres:/volumes/postgresql/data
     networks:
-      - samithiwat
+      - samithiwat-app
     ports:
       - ${DATABASE_PORT}:${DATABASE_PORT}
     command: -p ${DATABASE_PORT}
 
 networks:
-  samithiwat:
-    name: samithiwat
+  samithiwat-app:
+    name: samithiwat-app
