--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,11 @@ DATABASE_PORT=5432
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+
+# Directus
+DIRECTUS_PORT=8050
+DIRECTUS_KEY='key'
+DIRECTUS_SECRET='secret'
+DIRECTUS_ADMIN_EMAIL='admin@localhost.com'
+DIRECTUS_ADMIN_PASSWORD='password'
+DIRECTUS_PUBLIC_URL=''
