Remove single quote in .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 PORT=8000
 
 # Database
-DATABASE_HOST='localhost'
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
 POSTGRES_DB=
 POSTGRES_USER=
@@ -10,8 +10,8 @@ POSTGRES_PASSWORD=
 
 # Directus
 DIRECTUS_PORT=8050
-DIRECTUS_KEY='key'
-DIRECTUS_SECRET='secret'
-DIRECTUS_ADMIN_EMAIL='admin@localhost.com'
-DIRECTUS_ADMIN_PASSWORD='password'
+DIRECTUS_KEY=key
+DIRECTUS_SECRET=secret
+DIRECTUS_ADMIN_EMAIL=admin@localhost.com
+DIRECTUS_ADMIN_PASSWORD=password
 DIRECTUS_PUBLIC_URL=''
