--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -55,17 +55,41 @@ services:
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
-  whoami:
-    image: "traefik/whoami"
-    container_name: "simple-service"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`api.samithiwat.dev`) && Path(`/whoami`)"
-      - "traefik.http.routers.whoami.entrypoints=web"
-      - "traefik.docker.network=traefik-net"
+
+  directus:
+    image: directus/directus:9.5
+    container_name: samithiwat-db-cms
+    restart: unless-stopped
+    ports:
+      - ${DIRECTUS_PORT}:${DIRECTUS_PORT}
+    volumes:
+      - ./volumes/upload:/directus/uploads
+      - ./directus/hooks:/directus/extendsion/hooks
+    environment:
+      KEY: ${DIRECTUS_KEY}
+      SECRET: ${DIRECTUS_SECRET}
+      PORT: ${DIRECTUS_PORT}
+
+      DB_CLIENT: "pg"
+      DB_HOST: "db"
+      DB_PORT: ${DATABASE_PORT}
+      DB_DATABASE: ${POSTGRES_DB}
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: $POSTGRES_PASSWORD}
+      CACHE_ENABLED: "false"
+
+      ADMIN_EMAIL: ${DIRECTUS_ADMIN_EMAIL}
+      ADMIN_PASSWORD: ${DIRECTUS_ADMIN_PASSWORD}
+
+      PUBLIC_URL: ${DIRECTUS_PUBLIC_URL}
     networks:
       - samithiwat-app
       - traefik-net
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.directus.rule=Host(`admin.samithiwat.dev`)"
+      - "traefik.http.routers.directus.entrypoints=web"
+      - "traefik.docker.network=trafik-net"
 
 networks:
   samithiwat-app:
