--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -80,6 +80,7 @@ services:
 
       ADMIN_EMAIL: ${DIRECTUS_ADMIN_EMAIL}
       ADMIN_PASSWORD: ${DIRECTUS_ADMIN_PASSWORD}
+      CONTENT_SECURITY_POLICY_DIRECTIVES__UPGRADE_INSECURE_REQUESTS: "null"
 
       PUBLIC_URL: ${DIRECTUS_PUBLIC_URL}
     networks:
