--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,7 @@ POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
-# Directus
-DIRECTUS_PORT=8055
-DIRECTUS_KEY=key
-DIRECTUS_SECRET=secret
-DIRECTUS_ADMIN_EMAIL=admin@localhost.com
-DIRECTUS_ADMIN_PASSWORD=password
-DIRECTUS_PUBLIC_URL=''
+# PG Admin
+PGADMIN_EMAIL=pgadmin@localhost.com
+PGADMIN_PASSWORD=password
+PGADMIN_PORT=3001
