--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -56,25 +56,27 @@ services:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
 
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: samithiwat-cms
-    restart: unless-stopped
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
-    ports:
-      - "5050:80"
-    volumes:
-      - /pgadmin/servers.json
-    networks:
-      - samithiwat-app
-      - traefik-net
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.pgadmin.rule=Host(`admin.samithiwat.dev`)"
-      - "traefik.http.routers.pgadmin.entrypoints=web"
-      - "traefik.docker.network=traefik-net"
+#  pgadmin:
+#    image: dpage/pgadmin4
+#    container_name: samithiwat-cms
+#    restart: unless-stopped
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+#      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+#      SCRIPT_NAME: "/admin"
+#    ports:
+#      - "5050:80"
+#    volumes:
+#      - /pgadmin/servers.json
+#    networks:
+#      - samithiwat-app
+#      - traefik-net
+#    labels:
+#      - "traefik.enable=true"
+#      - "traefik.http.routers.pgadmin.rule=Host(`api.samithiwat.dev`)"
+#      - "traefik.http.routers.pgadmin.entrypoints=web"
+#      - "traefik.docker.network=traefik-net"
+#      - "traefik.frontend.rule=PathPrefix:/admin"
 
 networks:
   samithiwat-app:
