--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DATABASE_PORT=5432
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+POSTGRES_SSL_MODE=disable
 
 # PG Admin
 PGADMIN_EMAIL=pgadmin@localhost.com
