--- a/.github/workflows/test-build-prod.yml
+++ b/.github/workflows/test-build-prod.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           context: .
           push: false
-          tags: ${{ format('samithiwat-backend/{0}:release', secrets.DEPLOYMENT_NAME) }}
+          tags: master
