Refactor to match with new directory

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -14,7 +14,7 @@ exec:
 
 # Where should any generated models go?
 model:
-  filename: src/graph/model/models_gen.go
+  filename: src/model/models_gen.go
   package: model
 
 # Where should the resolver implementations go?
@@ -56,19 +56,19 @@ models:
       - github.com/arsmn/fastgql/graphql.Int64
       - github.com/arsmn/fastgql/graphql.Int32
   Setting:
-    model: github.com/samithiwat/samithiwat-backend/src/graph/model.Setting
+    model: github.com/samithiwat/samithiwat-backend/src/model.Setting
     fields:
       AboutMe:
         resolver: true
       Timeline:
         resolver: true
   Badge:
-    model: github.com/samithiwat/samithiwat-backend/src/graph/model.Badge
+    model: github.com/samithiwat/samithiwat-backend/src/model.Badge
     fields:
       Icon:
         resolver: true
   GithubRepo:
-    model: github.com/samithiwat/samithiwat-backend/src/graph/model.GithubRepo
+    model: github.com/samithiwat/samithiwat-backend/src/model.GithubRepo
     fields:
       Framework:
         resolver: true
