--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,11 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_SSL_MODE=disable
 
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+ALLOW_EMPTY_PASSWORD=yes
+
 # PG Admin
 PGADMIN_EMAIL=pgadmin@localhost.com
 PGADMIN_PASSWORD=password
